--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Couselling Guru</title>
 </head>
 <body>
     <nav class="navbar">
@@ -19,10 +20,10 @@
         </div>
         <div class="nav-social">
             <ul class="nav-social-list">
-                <li><a href="#facebook">facebook</a></li>
-                <li><a href="#instagram">instagram</a></li>
-                <li><a href="#youtube">youtube</a></li>
-                <li><a href="#twitter">twitter</a></li>
+                <li><a href="#facebook"><div class="media-circle"><i class="fa fa-instagram" style="font-size:20px;color:rgb(32, 32, 32);padding: 5px 5px"></i></div></a></li>
+                <li><a href="#instagram"><div class="media-circle"></div></a></li>
+                <li><a href="#youtube"><div class="media-circle"></div></a></li>
+                <li><a href="#twitter"><div class="media-circle"></div></a></li>
             </ul>
         </div>
     </nav>
