Home page completed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
     <title>Couselling Guru</title>
 </head>
 <body>
@@ -12,25 +13,42 @@
         <div class="nav-list">
             <ul class="nav-list-text">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#design">Design</a></li>
-                <li><a href="#photography">Photography</a></li>
+                <li><a href="#video">Video</a></li>
+                <li><a href="#support">Support</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <div class="nav-social">
             <ul class="nav-social-list">
-                <li><a href="#facebook"><div class="media-circle"><i class="fa fa-instagram" style="font-size:20px;color:rgb(32, 32, 32);padding: 5px 5px"></i></div></a></li>
-                <li><a href="#instagram"><div class="media-circle"></div></a></li>
-                <li><a href="#youtube"><div class="media-circle"></div></a></li>
-                <li><a href="#twitter"><div class="media-circle"></div></a></li>
+                <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
+                <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
+                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div>
     </nav>
+    <p class="home"><a href="#home">Home</a></p>
+    <div class="underline"></div>
     <section>
-        <div class="text-part"></div>
+        <div class="text-part-back">
+            <p class="iam">I am Archana Agarwal</p>
+        </div>
         <div class="photo"></div>
     </section>
-    <footer></footer>
+    <footer class="footer">
+        <p class="big-text">Get counselling Now</p>
+        <p class="small-text">Subscribe my channel for latest update</p>
+        <div class="subscribe"><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new" class="sub-link"><p class="sub-text">Subscribe<br/>Now</p></a></div>
+        <div class="bottom-nav-social">
+            <ul class="bottom-nav-social-list">
+                <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
+                <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
+                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
+            </ul>
+        </div> 
+        <p class="archana">Archana Agarwal</p>
+    </footer>
 </body>
 </html>
