completed all the paged basic layout

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
-    <title>Couselling Guru</title>
+    <title>Counselling Guru</title>
 </head>
 <body>
     <nav class="navbar">
@@ -28,15 +28,25 @@
             </ul>
         </div>
     </nav>
-    <p class="home"><a href="index.html">Home</a></p>
-    <div class="underline"></div>
-    <section>
-        <div class="text-part-back">
-            <p class="iam">I am Archana Agarwal</p>
-            <p class="aboutme">I am a relationship counseling expert ,I have done Masters in Psychology and Sociology.<br/>I provide relationship counseling tips on my channel.<br/>Subscribe and share for advice on above mentioned issues.</p>
-        </div>
-        <div class="photo"></div>
+    <p class="contact"><a href="contact.html">Contact</a></p>
+    <div class="underlinec"></div>
+
+    <section class="contact-body">
+        <div class="left-c"><p class="get_in">Get in touch</p></div>
+        <form class="form">
+            <label class="name">Name*</label><br/>
+            <input type="text" placeholder="First Name" class="fname-input">
+            <input type="text" placeholder="Last Name" class="lname-input"><br/>
+            <label class="email">Email*</label><br/>
+            <input type="text" class="email-input"><br/>
+            <label class="message">Message</label><br/>
+            <textarea rows="4" cols="40" class="message-input"></textarea>
+            <div class="submit"><a href="#submit"><p>Submit</p></a></div>
+        </form>
     </section>
+   
+
+
     <footer class="footer">
         <p class="big-text">Get counselling Now</p>
         <p class="small-text">Subscribe my channel for latest update</p>
