completed the website

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             <ul class="nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div>
@@ -55,7 +55,7 @@
             <ul class="bottom-nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div> 
