--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul class="nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div>
@@ -35,7 +35,7 @@
             <p class="iam">I am Archana Agarwal</p>
             <p class="aboutme">I am a relationship counseling expert ,I have done Masters in Psychology and Sociology.<br/>I provide relationship counseling tips on my channel.<br/>Subscribe and share for advice on above mentioned issues.</p>
         </div>
-        <div class="photo"></div>
+        <div class="photo"><img src="/my_photo.jpg"></div>
     </section>
     <footer class="footer">
         <p class="big-text">Get counselling Now</p>
@@ -45,7 +45,7 @@
             <ul class="bottom-nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div> 
