--- a/video.html
+++ b/video.html
@@ -23,7 +23,7 @@
             <ul class="nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div>
@@ -31,10 +31,38 @@
     <p class="video"><a href="video.html">Video</a></p>
     <div class="underlinev"></div>
 
-    <section class="video-back"></section>
+    <section class="video-back">
+        <iframe class="video1" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video2" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video3" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video4" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video5" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
 
+        <iframe class="video6" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video7" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video8" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video9" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video10" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
 
-    <footer class="footer">
+        <iframe class="video11" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video12" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video13" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video14" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video15" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+
+        <iframe class="video16" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video17" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video18" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video19" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video20" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+
+        <iframe class="video21" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video22" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video23" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video24" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video25" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+    </section>
+        <footer class="footer">
         <p class="big-text">Get counselling Now</p>
         <p class="small-text">Subscribe my channel for latest update</p>
         <div class="subscribe"><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new" class="sub-link"><p class="sub-text">Subscribe<br/>Now</p></a></div>
@@ -42,7 +70,7 @@
             <ul class="bottom-nav-social-list">
                 <li><a href="https://www.youtube.com/channel/UCVv--s11NApQ6sjvY0tndUQ" target="new"><div class="media-circle"><i class="fa fa-youtube-play" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 4px"></i></div></a></li>
                 <li><a href="https://www.instagram.com/counselling_guru/" target="new"><div class="media-circle"><i class="fa fa-instagram" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
-                <li><a href="#facebook"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
+                <li><a href="https://www.facebook.com/Archana-Agarwal-114553163681211" target="new"><div class="media-circle" target="new"><i class="fa fa-facebook-f" style="font-size:19px;color:rgb(131, 130, 130);padding: 5px 7px"></i></div></a></li>
                 <li><a href="#twitter"><div class="media-circle" target="new"><i class="fa fa-twitter" style="font-size:20px;color:rgb(131, 130, 130);padding: 5px 6px"></i></div></a></li>
             </ul>
         </div> 
