videos section updated

--- a/video.html
+++ b/video.html
@@ -32,35 +32,35 @@
     <div class="underlinev"></div>
 
     <section class="video-back">
-        <iframe class="video1" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video2" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video3" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video4" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video5" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video1" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video2" src="https://www.youtube.com/embed/8spkhwb3gY4?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video3" src="https://www.youtube.com/embed/6D1EH6UZHKo?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video4" src="https://www.youtube.com/embed/8OZpe3dm9lA?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video5" src="https://www.youtube.com/embed/uDBgbLt5K3E?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
 
-        <iframe class="video6" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video7" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video8" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video9" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video10" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video6" src="https://www.youtube.com/embed/w7yDAOY8b48?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video7" src="https://www.youtube.com/embed/kXtFomdnQvw?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video8" src="https://www.youtube.com/embed/2lVLjrV5EiE?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video9" src="https://www.youtube.com/embed/edr-qgvc-0o?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video10" src="https://www.youtube.com/embed/4IR8P1KIkTs?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
 
-        <iframe class="video11" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video12" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video13" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video14" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video15" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video11" src="https://www.youtube.com/embed/btX_FazW4-c?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video12" src="https://www.youtube.com/embed/TqF53mZfNU8?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video13" src="https://www.youtube.com/embed/bncAytFh75k?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video14" src="https://www.youtube.com/embed/8PdVG3iGtwE?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video15" src="https://www.youtube.com/embed/dF_uwhjli_w?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
 
-        <iframe class="video16" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video17" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video18" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video19" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video20" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video16" src="https://www.youtube.com/embed/psFHyaOU7RA?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video17" src="https://www.youtube.com/embed/_QefAwuUMMw?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video18" src="https://www.youtube.com/embed/3tc0fnboBU8?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video19" src="https://www.youtube.com/embed/_SjFecnpc_Q?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video20" src="https://www.youtube.com/embed/QB9wUordLH4?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
 
-        <iframe class="video21" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video22" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video23" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video24" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
-        <iframe class="video25" src="https://www.youtube.com/embed/VhCR5LV1htk?vq=hd1080&modestbranding=1&rel=0&theme=light&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video21" src="https://www.youtube.com/embed/GTO_irEf6U0?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video22" src="https://www.youtube.com/embed/3JOER7Yvyn0?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video23" src="https://www.youtube.com/embed/Tvo7LkXbTE0?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video24" src="https://www.youtube.com/embed/_97CcGbnyeY?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
+        <iframe class="video25" src="https://www.youtube.com/embed/ruPaNM5tyos?vq=hd1080&modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&theme=light&fs=0&color=white" width="560" height="315" frameborder="0"></iframe>
     </section>
         <footer class="footer">
         <p class="big-text">Get counselling Now</p>
